Added some code for Kafka Streams.

--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=Order-Service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+server.port=8081
+
+
+# Kafka bootstrap servers (broker addresses)
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Default topic to send messages (optional; can also be specified programmatically)
+#spring.kafka.template.default-topic=your_topic_name
+
+# Key and value serializers for the producer
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Acknowledgment configuration (ensures message delivery confirmation)
+#spring.kafka.producer.acks=1
+
+# Retries for producer to handle transient errors
+#spring.kafka.producer.retries=3
+
