--- a/Payment-Service/src/main/resources/application.properties
+++ b/Payment-Service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Payment-Service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/paymentdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+server.port=8082
