--- a/Payment-Service/src/main/resources/application.properties
+++ b/Payment-Service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
+
+# Kafka bootstrap servers (broker addresses)
+spring.kafka.bootstrap-servers=localhost:9092
