resolving Cors for all apps

--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -10,6 +10,8 @@ server.port=8081
 # Kafka bootstrap servers (broker addresses)
 spring.kafka.bootstrap-servers=localhost:9092
 
+cors.allowed-origins=*
+
 # Default topic to send messages (optional; can also be specified programmatically)
 #spring.kafka.template.default-topic=your_topic_name
 
