--- a/Payment-Service/src/main/resources/application.properties
+++ b/Payment-Service/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 
+cors.allowed-origins=*
+
 # Kafka bootstrap servers (broker addresses)
 spring.kafka.bootstrap-servers=localhost:9092
