--- a/Inventory-Service/src/main/resources/application.properties
+++ b/Inventory-Service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 
+cors.allowed-origins=*
 
 # Kafka bootstrap servers (broker addresses)
 spring.kafka.bootstrap-servers=localhost:9092
