--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Order-Service
 spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 server.port=8081
 
 
