marking completed saga design pattern with kafka and microservices, deployed on the AKS with docker and kubernetes.

--- a/Inventory-Service/src/main/resources/application.properties
+++ b/Inventory-Service/src/main/resources/application.properties
@@ -11,6 +11,9 @@ cors.allowed-origins=*
 # Kafka bootstrap servers (broker addresses)
 spring.kafka.bootstrap-servers=localhost:9092
 
+default.consumer.group=inventory-group
+
+spring.flyway.enabled=false
 # Default topic to send messages (optional; can also be specified programmatically)
 #spring.kafka.template.default-topic=your_topic_name
 
