--- a/Payment-Service/src/main/resources/application.properties
+++ b/Payment-Service/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.application.name=Payment-Service
 spring.datasource.url=jdbc:mysql://localhost:3306/paymentdb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 
 cors.allowed-origins=*
 
 # Kafka bootstrap servers (broker addresses)
 spring.kafka.bootstrap-servers=localhost:9092
+default.consumer.group=payment-group
+
+inventory-service-url=http://localhost:8080
