--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -3,12 +3,13 @@ spring.application.name=Order-Service
 spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 
 
 # Kafka bootstrap servers (broker addresses)
 spring.kafka.bootstrap-servers=localhost:9092
+default.consumer.group=order-group
 
 cors.allowed-origins=*
 
