--- a/shopping-ui/DockerFile
+++ b/shopping-ui/DockerFile
@@ -1,18 +1,35 @@
-# Build stage
-FROM node:18 AS build
+# Use a Node.js base image
+FROM node:18 AS builder
+
+# Set the working directory
 WORKDIR /app
+
+# Copy package.json and package-lock.json
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the application code
 COPY . .
-ARG VITE_BASE_URL=__BASE_URL__
-ENV VITE_BASE_URL=${VITE_BASE_URL}
+
+# Define the base URL as a build argument
+ARG VITE_API_BASE_URL
+
+# Set the environment variable for the build
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
+
+# Build the app
 RUN npm run build
 
-# Production stage
+# Use a lightweight Nginx image to serve the app
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY entrypoint.sh /entrypoint.sh
-COPY nginx.template.conf /etc/nginx/conf.d/default.conf.template
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+
+# Copy the built app from the builder stage
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
