--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Order-Service
 
+management.endpoints.web.exposure.include=prometheus,health,info,metrics
+management.endpoint.prometheus.enabled=true
+
 spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
 spring.datasource.password=root
